--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,5 +18,8 @@ spring:
       enabled: true
       locations: classpath:db/migration
 
+  kafka:
+    bootstrap-servers: localhost:9092
+
 server:
   port: 8080
